<resources>
    <string name="app_name">CMSC434SmartFridgeProject</string>
    <string name="title_home">Home</string>
    <string name="title_inventory">Inventory</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_cart">Cart</string>
    <string name="title_recipes">Recipes</string>
    <string name = "title_settings">Settings</string>

    <string-array name="language_spinner_array">
        <item>English</item>
        <item>Español</item>
        <item>Francais</item>
        <item>中文</item>
        <item>日本語</item>
        <item>한국어</item>
    </string-array>

</resources>